fixing the fixed header and jump links

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -21,6 +21,27 @@
     position: fixed;
     left: 50%;
     margin-left: -50%;
+    height: 100px;
+    top: 0;
+    background-color: lightsteelblue;
+}
+
+.content-container
+{
+    margin-top: 100px;
+}
+
+.banner-container h1,h2
+{
+    margin: 0;
+}
+
+.anchor 
+{
+    display: block;
+    position: relative;
+    top: -100px;
+    visibility: hidden;
 }
 
 a
